# ChangeLog for dev-python/fabulous
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  13 May 2011; James Rowe <jnrowe@gmail.com> fabulous-0.1.5.ebuild:
  Whitespace fix.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  09 Dec 2010; James Rowe <jnrowe@gmail.com> fabulous-0.1.5.ebuild:
  Keyworded x86.

  09 Dec 2010; James Rowe <jnrowe@gmail.com> fabulous-0.1.5.ebuild:
  Keyworded amd64.

  04 Nov 2010; James Rowe <jnrowe@gmail.com> fabulous-0.1.5.ebuild:
  Keyworded ~x86.

*fabulous-0.1.5 (04 Nov 2010)

  04 Nov 2010; James Rowe <jnrowe@gmail.com> +fabulous-0.1.5.ebuild,
  +metadata.xml:
  Initial ebuild, by me [224].
