@@ -5,7 +5,7 @@ DIST fabulous-0.1.5.tar.gz 322052 RMD160 887175353b31eec3fcb1b818483c171c21be79f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApLYACgkQzJrj3cAXR0k8agCgl+EgTQZKjlAPwZd1IJldHPGQ
-aIwAnRHrBgtohu/fl4Yg4Ec8B4mU5XIB
-=skPl
+iEYEAREKAAYFAk9SP38ACgkQzJrj3cAXR0nlQQCgkgri975QKB2mj7gWudos5inu
+yVwAoK0TxqqCqYIg/kZPUbVB5Y2q2ae0
+=6fWH
 -----END PGP SIGNATURE-----
