@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-python/setuptools doc? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+DEPEND=dev-python/setuptools doc? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 DESCRIPTION=Makes your terminal output totally fabulous
 EAPI=3
 HOMEPAGE=http://lobstertech.com/fabulous.html
 IUSE=doc
 KEYWORDS=amd64 x86
 LICENSE=MIT
-RDEPEND=dev-python/grapefruit dev-python/imaging >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+RDEPEND=dev-python/grapefruit dev-python/imaging >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 SLOT=0
 SRC_URI=http://lobstertech.com/media/file/fabulous/fabulous-0.1.5.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	06dff99bcab2fd584bd6d2aa6019ee19	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68
-_md5_=d08bc2b1716051475a0878b0d775a77b
+_md5_=d84962d1fd9049027b9c42c58f4cb976
